fixing 5day wrap issue on my phone viewport.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,9 @@ footer{
   }
 
   @media (max-width: 430px) {
+    .forecastDay {
+        width: 90%;
+    }
     header {
         line-height: 495%;
         font-size: 20px;
